ENOUGH WITH THE HEDGES